--- a/index.html
+++ b/index.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>PortFolio</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>Hola</h1>
+    <!-- Menu del encabezado -->
+    <div class="contenedor-header">
+      <header>
+        <div class="logo">
+          <a href="#">Nick</a>
+        </div>
+        <nav id="nav">
+          <ul>
+            <li><a href="#inicio">INICIO</a></li>
+            <li><a href="#sobremi">SOBRE MI</a></li>
+            <li><a href="#skills">SKILLS</a></li>
+            <li><a href="#curriculum">CURRICULUM</a></li>
+            <li><a href="#portfolio">PORTFOLIO</a></li>
+            <li><a href="#contacto">CONTACTO</a></li>
+          </ul>
+        </nav>
+        <div class="nav-responsive">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </header>
+    </div>
+    <!-- Inicio -->
+    <section class="inicio" id="inicio">
+      <div class="contenido-banner">
+        <div class="contenido-img">
+          <img src="img/fotoperfil2.jpg" alt="fotodeperfil" />
+        </div>
+        <h1>Paul Espinoza</h1>
+        <h2>Full Stact-Developer- Experto en software</h2>
+        <div class="redes">
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#"><i class="fa-brands fa-github"></i></a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
