se agrego datos

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </div>
         <nav id="nav">
           <ul>
-            <li><a href="#inicio">INICIO</a></li>
-            <li><a href="#sobremi">SOBRE MI</a></li>
-            <li><a href="#skills">SKILLS</a></li>
-            <li><a href="#curriculum">CURRICULUM</a></li>
-            <li><a href="#portfolio">PORTFOLIO</a></li>
-            <li><a href="#contacto">CONTACTO</a></li>
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#sobremi">Sobre mi</a></li>
+            <li><a href="#skills">Habilidades</a></li>
+            <li><a href="#curriculum">Curriculum</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contacto">Contacto</a></li>
           </ul>
         </nav>
         <div class="nav-responsive">
@@ -47,6 +47,54 @@
         <div class="redes">
           <a href="#"><i class="fa-brands fa-linkedin"></i></a>
           <a href="#"><i class="fa-brands fa-github"></i></a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Seccion sobre mi  -->
+    <section id="sobremi" class="sobremi">
+      <div class="contenido-seccion">
+        <h2>Sobre mi</h2>
+        <p>
+          <span>Hola, soy Paul Espinoza </span>Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Magnam doloribus pariatur soluta aperiam
+          velit minus ducimus, nostrum odit. Voluptatibus ad similique explicabo
+          minima recusandae, facere suscipit eius eaque saepe quidem.
+        </p>
+
+        <div class="fila">
+          <!-- aqui van los datos personales -->
+
+          <div class="col">
+            <h3>Datos personales</h3>
+            <ul>
+              <li><strong>Cumpleaños</strong> 28-11-1993</li>
+              <li><strong>Telefono</strong> +51 969728787</li>
+              <li><strong>Email</strong> paulmct93@gmail.com</li>
+              <!-- <li><strong>Website</strong> www.alucard.com</li> -->
+              <li><strong>Cumpleaños</strong> 28-11-1993</li>
+            </ul>
+          </div>
+          <!-- intereses -->
+          <div class="col">
+            <h3>Intereses</h3>
+            <div class="contenedor-intereses">
+              <div class="interes">
+                <i class="fa-solid fa-person-walking"></i>
+                <span>Caminar</span>
+              </div>
+              <div class="interes">
+                <i class="fa-solid fa-list-music"></i>
+
+                <span>Escuchar musica</span>
+              </div>
+              <div class="interes">
+                <i class="fa-solid fa-gamepad"></i>
+
+                <span>Jugar</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
